--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <article id="online-reputation-management" class="article-card">
                 <figure>
-                <img src="./assets/images/online-reputation-management.jpg" id="float-right" alt="A person looking at thier phone while working on a laptop that shows a graph titled 'REPUTATION' depicting an upward trend" />
+                    <img src="./assets/images/online-reputation-management.jpg" id="float-right" alt="A person looking at thier phone while working on a laptop that shows a graph titled 'REPUTATION' depicting an upward trend" />
                 </figure>
                 <h2>Online Reputation Management</h2>
                 <p>
@@ -51,7 +51,9 @@
             </article>
 
             <article id="social-media-marketing" class="article-card">
-                <img src="./assets/images/social-media-marketing.jpg" id="float-left" alt="A wooden desk with social media logos and speech bubbles containing social buzzwords such as Share, Tweet and Like placed on top" />
+                <figure>
+                    <img src="./assets/images/social-media-marketing.jpg" id="float-left" alt="A wooden desk with social media logos and speech bubbles containing social buzzwords such as Share, Tweet and Like placed on top" />
+                </figure>
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -63,7 +65,9 @@
         <aside>
             <div class="aside-div">
                 <h3>Lead Generation</h3>
-                <img class="aside-img" src="./assets/images/lead-generation.png" alt="An image depicting a sales funnel with money coming out of the thin end" />
+                <figure>
+                    <img class="aside-img" src="./assets/images/lead-generation.png" alt="An image depicting a sales funnel with money coming out of the thin end" />
+                </figure>
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
@@ -71,7 +75,9 @@
 
             <div class="aside-div">
                 <h3>Brand Awareness</h3>
-                <img class="aside-img" src="./assets/images/brand-awareness.png" alt="An image depicting a human with a lightbulb representing their head and 'rays of light' emitting like ideas" />
+                <figure>
+                    <img class="aside-img" src="./assets/images/brand-awareness.png" alt="An image depicting a human with a lightbulb representing their head and 'rays of light' emitting like ideas" />
+                </figure>
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
@@ -79,7 +85,9 @@
 
             <div class="aside-div">
                 <h3>Cost Management</h3>
-                <img class="aside-img" src="./assets/images/cost-management.png" alt="An image showing a cog with money in front of it" />
+                <figure>
+                    <img class="aside-img" src="./assets/images/cost-management.png" alt="An image showing a cog with money in front of it" />
+                </figure>
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
@@ -90,9 +98,8 @@
         <footer>
             <h6>Made with ❤️️ by Horiseon</h6>
             <p>
-                &copy; 2019 Horiseon Social Solution Services, Inc.
+                &copy; 2022 Horiseon Social Solution Services, Inc.
             </p>
         </footer>
-
     </body>
 </html>
