--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <!-- Header section-->
         <header>
-            <h1>Hori<span id="header-seo">seo</span>n</h1>
+            <h1><a href="#">Hori<span id="header-seo">seo</span>n</a></h1>
             <nav>
                 <ul>
                     <li>
